<resources>
    <string name="app_name">MSU Census App</string>
    <string name="Regnum">Reg Number</string>
    <string name="Signin">Don\'t have an account? Sign in here.</string>
    <string name="Forgot">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="Mr">Mr.</string>
    <string name="Miss">Miss.</string>
    <string name="Mrs">Mrs.</string>

    <!-- Register -->
    <string name="cell">Phone Number</string>
    <string name="fname">First Name</string>
    <string name="title">Title</string>
    <string name="username">Username</string>
    <string name="religion">Religion</string>
    <string name="status">Marital Status</string>
    <string name="lname">Last Name</string>
    <string name="Address">Home Address</string>
    <string name="contactAddress">Contact Address</string>
    <string name="dob">Date of Birth</string>
    <string name="pass">Password</string>
    <string name="cnfmPass">Confirm</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="gender">Sex</string>
    <string name="NationalId">National ID</string>
    <string name="nationality"> Nationality</string>
    <string name="POB">Place of Birth</string>
    <string name="citizen">Citizenship</string>
    <string name="msuEmail">Msu Email</string>


    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home">Home</string>
    <string name="results">Results</string>
    <string name="onlineClass">Online Classes</string>
    <string name="eSadza">E-Sadza</string>
    <string name="tuition">Tuition and Residency</string>
    <string name="timetable">Timetable</string>
    <string name="reg">Registration</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="recoveryText">Please enter your Registration number and email.</string>
    <string name="resetText">Please input your new password.</string>


    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="degree">Programme</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="level">Level</string>
    <string name="ModEntry">Mode of Entry</string>
    <string name="Campus">Campus</string>
    <string name="disabled">Do you poses any form of disability?</string>
    <string name="age">Age</string>
    <string name="hostel">Hostel</string>
    <string name="malesVfemales">No. of Males and Females</string>
    <string name="disabledValues">No. of disabled students</string>
    <string name="ageRanges">Age Ranges</string>
    <string name="hostelNmbers">Occupants per Hostels</string>
    <string name="admin">Login to View Census Results</string>
    <string name="guest">Fill in Census details</string>
    <string name="or">OR</string>

    <string-array name="Level">
        <item>1.1</item>
        <item>1.2</item>
        <item>2.1</item>
        <item>2.2</item>
        <item>3.1</item>
        <item>3.2</item>
        <item>4.1</item>
        <item>4.2</item>
    </string-array>

    <string-array name="Hostels">
        <item>Rufaro</item>
        <item>Magamba</item>
        <item>Kaguvi</item>
        <item>Wadzanayi</item>
        <item>Runyararo</item>
        <item>Uhuru</item>
        <item>Dzapasi</item>
        <item>Japan</item>
        <item>China</item>
    </string-array>

    <string-array name="choice">
        <item>Yes</item>
        <item>No</item>
    </string-array>


    <string-array name="MOE">
        <item>Conventional</item>
        <item>Block Release</item>
        <item>Parallel</item>
    </string-array>
    <string-array name="Campus">
        <item>Main Campus</item>
        <item>TelOne Campus</item>
        <item>Zvishavane Campus</item>
        <item>Harare Campus</item>
    </string-array>


    <string-array name="countries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua &amp; Deps</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Central African Rep</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Congo Democratic Rep</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland {Republic}</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Ivory Coast</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Korea North</item>
        <item>Korea South</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar, {Burma}</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russian Federation</item>
        <item>Rwanda</item>
        <item>St Kitts &amp; Nevis</item>
        <item>St Lucia</item>
        <item>Saint Vincent &amp; the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome &amp; Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad &amp; Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>

</resources>
