<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.SigninActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="219dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="8dp"
        app:contentPadding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/name"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/surname"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/black_ops_one"
                android:hint="@string/fname"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/surname"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/black_ops_one"
                android:hint="@string/lname"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/email"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/black_ops_one"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/national_id"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/surname"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/black_ops_one"
                android:hint="@string/NationalId"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/password"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:autofillHints=""
                android:fontFamily="@font/black_ops_one"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/passCnfm"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/national_id"
                android:layout_alignBottom="@+id/password"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/black_ops_one"
                android:hint="@string/cnfmPass"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="263dp"
                android:elevation="4dp"
                android:fontFamily="@font/black_ops_one"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>